[package]
name = "rustysm"
version = "0.1.4"
authors = ["Ole Sivert Aarhaug <ole.sivert@gmail.com>", "Tore Mattias Apeland <turtlesmoker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
alsa = "0.4.3"
chrono = "0.4"
termion = "1.5"
notify = "4.0.12"
easy_reader = "0.5.0"
log = "0.4.13"
log4rs = "1.0.0"
dirs = "3.0.1"
clap = "2.33.3"
youtube_dl = { git = "https://github.com/stemnic/youtube-dl-rs" }
mpv = "0.2"
uuid = { version = "0.8", features = ["v4"] }
